--- a/crud-app/package.json
+++ b/crud-app/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.20",
     "crud-app": "file:",
     "express": "^4.18.2",
+    "flowbite": "^3.1.2",
     "postcss": "^8.5.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.6",
